<resources>
    <string name="app_name">URybakaBusinessCard</string>
    <string name="head">U Rybaka</string>
    <string name="subhead">fish and karaoke bar</string>
    <string name="description">We are making great fishes meals straight from the Baltic sea. Best polish seaside kitchen. After dinner you can chillout at our karaoke evening, everyday from 8 pm. </string>
    <string name="tittle_photos">Photos</string>
    <string name="tittle_contact">Contact</string>
    <string name="opening_hours">We are open everyday 10:00-02:00</string>
    <string name="location">We are located in Mielno</string>
    <string name="phone_number">+48-516-548-581</string>
    <string name="email">urybakamielno@gmail.com</string>
    <string name="facebook">facebook.com/urybakamielno</string>
</resources>
